<resources>
    <string name="app_name">MyATM</string>
    <string name="account">Account:</string>
    <string name="moneyInHand">Money In Hand:</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="deposit">DEPOSIT</string>
    <string name="accountAmt">3000</string>
    <string name="moneyInHandAmt">0</string>
    <string-array name="moneyArray">
        <item>100</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
</resources>